syntax = "proto3";

package Nebula.Protocols;

message PropertyId
{
  string Name = 1;
}